--- a/styles/testi.module.css
+++ b/styles/testi.module.css
@@ -87,7 +87,7 @@
     color:rgb(255, 254, 254);
     text-align:center;
     transition: 0.5;
-    z-index:1000;
+/*     z-index:1000; */
 
 }
 .content .Link{
