--- a/styles/jombo.module.css
+++ b/styles/jombo.module.css
@@ -39,7 +39,18 @@
         width:100%;
     }
     .description{
-        width:100%; 
+        width:100%;
+            display: flex;
+            flex-direction:column;
+            justify-content: center;
+            align-items: center;
+    }
+    .description p{
+        width:90%;
+            display: flex;
+            flex-direction:column;
+            justify-content: center;
+            align-items: center;
     }
 }
 @media(max-width:483px){
@@ -51,6 +62,20 @@
         width:100%;
         margin-bottom: 200px;
     }
+    .description{
+        width:100%;
+            display: flex;
+            flex-direction:column;
+            justify-content: center;
+            align-items: center;
+    }
+    .description p{
+        width:90%;
+            display: flex;
+            flex-direction:column;
+            justify-content: center;
+            align-items: center;
+    }
 }
 @media(max-width:400px){
     .jombotron{
@@ -60,5 +85,19 @@
         align-items: center;
         width:100%;
         margin-bottom: 300px;
+    }
+    .description{
+        width:100%;
+            display: flex;
+            flex-direction:column;
+            justify-content: center;
+            align-items: center;
+    }
+    .description p{
+        width:90%;
+            display: flex;
+            flex-direction:column;
+            justify-content: center;
+            align-items: center;
     }
 }
