--- a/styles/blog.module.css
+++ b/styles/blog.module.css
@@ -10,6 +10,7 @@
     background-color: rgb(139, 11, 11);
 }
 .blog h3{
+   
     display: flex;
     justify-content: center;
     align-items: center;
@@ -19,10 +20,25 @@ position: inherit;
 width:100%;
 height: 250px;
 }
+
 .image img{
     position: inherit;
     width:100%;
     height: 250px;
+    }
+    .blog .content p{
+        width:98%;
+        font-size: 15px;
+        color:rgb(225, 221, 221);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .blog .content {
+     
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
     @media(max-width:1003px){
         .blog{
@@ -39,6 +55,7 @@ height: 250px;
         }
         .blog .content p{
             width:80%;
+            font-size: 12px;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -63,7 +80,13 @@ height: 250px;
         border: 2px solid rgb(105, 32, 32);
         background-color: rgb(139, 11, 11);
     }
-     .blog .content {
+    .blog h3{
+        padding-left: 15px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .blog .content {
       
         display: flex;
         justify-content: center;
