--- a/styles/banner.module.scss
+++ b/styles/banner.module.scss
@@ -52,7 +52,7 @@
         position: absolute;
         top: 100px;
         transform: translateX(0%); 
-         z-index:3;
+//          z-index:3;
         display: flex;
         flex-direction: column;
         justify-content:center;
